# house-property-finder

./: .gitignore  README.md
banana-costume-generator/: .gitignore  README.md  app.py  main.py  pyproject.toml
expense-tracker/: PROJECT_SUMMARY.md  README.md
expense-tracker/backend/: api.py  config.py
expense-tracker/backend/services/: meal_service.py
expense-tracker/frontend/: package-lock.json  package.json
expense-tracker/frontend/app/: page.tsx
expense-tracker/frontend/app/expense-tracker/: page.tsx
expense-tracker/frontend/app/meal-planner/: page.tsx
expense-tracker/frontend/lib/: api.ts  utils.ts
substack-archiver/: .gitignore  README.md  capture.sh  docker-compose.yml  index.sh  pyproject.toml
substack-archiver/archiver/: README.md  capture.py
substack-archiver/docs/: SESSION_SUMMARY.md
substack-archiver/mcp/: README.md  server.py
substack-archiver/slack-agent/: README.md
